# bin2c

./: CMakeLists.txt
bin2c/: main.c
getopt/: getopt.c  getopt.h
